# teste_beam

./: README.md  pyproject.toml
dump/: TesteBeam.ipynb  TesteBeam.py
src/: ProjetoCurso.py  resultado_final-00000-of-00001.csv  resultado_final-00000-of-00001.parquet
