[tool.poetry]
name = "projeto-beam"
version = "0.1.0"
description = ""
authors = ["Felipe Alves <lipealvessax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyarrow = "^19.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
